Updated scripts and added first streaming test.
- HdfsRecoveryTest tests whether every file written to a directory is
  read by the system.
- Run scripts updated to redirect test's stdout and stderr to separate
  files for future debugging.